Refactor parser and first version of array support